# rust-sls

./: Cargo.toml  README.md  package.json  serverless.yml
src/: main.rs
test/resources/: test_request.json
