[package]
name = "rust-sls"
version = "0.1.0"
authors = ["mototska <mototsuka8973@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.4.1"
tokio = "1.13.0"
log = "0.4.14"
serde_json = "^1"
serde_derive = "^1"
maplit = "1.0.2"

